[gd_scene load_steps=41 format=3 uid="uid://00aolqoslp0o"]

[ext_resource type="Script" path="res://scripts/GameController.gd" id="1_b00tj"]
[ext_resource type="Texture2D" uid="uid://conhviow12h36" path="res://graphics/UI/joystick.png" id="1_gw2ym"]
[ext_resource type="Texture2D" uid="uid://cqoap30so5ykd" path="res://graphics/UI/joystick_1.png" id="2_fvsn1"]
[ext_resource type="Script" path="res://scripts/Joystick.gd" id="3_12l4d"]
[ext_resource type="Texture2D" uid="uid://cdr6t44v3wafl" path="res://graphics/UI/joystick_2.png" id="4_7y7di"]
[ext_resource type="Script" path="res://scripts/JoystickAttack.gd" id="5_inmwk"]
[ext_resource type="Script" path="res://scripts/HealthMenu.gd" id="6_tstij"]
[ext_resource type="FontFile" uid="uid://88njqog5s3vx" path="res://dpcomic.ttf" id="7_s4rn7"]
[ext_resource type="Script" path="res://scripts/CenterTop.gd" id="8_hqe1p"]
[ext_resource type="TileSet" uid="uid://ddi1i8uf8jvas" path="res://map.tres" id="10_4sqws"]
[ext_resource type="Script" path="res://scripts/WorldGenerator.gd" id="10_b0mh8"]
[ext_resource type="Texture2D" uid="uid://bhkwsuv24ris7" path="res://graphics/UI/goldBag.png" id="11_1xyqr"]
[ext_resource type="Script" path="res://scripts/Player.gd" id="11_8epc5"]
[ext_resource type="Script" path="res://scripts/GoldLabel.gd" id="11_yk85n"]
[ext_resource type="Texture2D" uid="uid://dgbk8rox76sb1" path="res://graphics/animation/player_animation1.png" id="12_2tukp"]
[ext_resource type="Script" path="res://scripts/LogContainer.gd" id="13_a2xyx"]
[ext_resource type="Script" path="res://scripts/Character.gd" id="13_fcpq7"]
[ext_resource type="Script" path="res://scripts/PlayerCamera.gd" id="15_ex2gy"]
[ext_resource type="Script" path="res://scripts/WeponHolder.gd" id="16_ueo6s"]
[ext_resource type="Texture2D" uid="uid://dx4l1l04rrpp8" path="res://graphics/items/wand3.png" id="17_qv646"]
[ext_resource type="Resource" uid="uid://bhabe7yjhwkrt" path="res://resources/items/wand1.tres" id="17_uu1gh"]
[ext_resource type="Texture2D" uid="uid://b68mlcifwrs7r" path="res://graphics/animation/blast.png" id="19_ueyyu"]
[ext_resource type="Texture2D" uid="uid://eo72wh3ko1j0" path="res://graphics/animation/Line.png" id="20_fhvkm"]
[ext_resource type="Script" path="res://fps.gd" id="22_j3grl"]

[sub_resource type="LabelSettings" id="LabelSettings_5f352"]
font = ExtResource("7_s4rn7")
font_size = 31
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vn7es"]
font = ExtResource("7_s4rn7")
font_size = 44
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_0ia1r"]
resource_name = "idleDown"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [5, 6]
}

[sub_resource type="Animation" id="Animation_ne4qq"]
resource_name = "idleSide"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_fuxjb"]
resource_name = "idleUp"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [9, 10]
}

[sub_resource type="Animation" id="Animation_s75hl"]
resource_name = "runningDown"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="Animation" id="Animation_sbcrl"]
resource_name = "runningSide"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 3]
}

[sub_resource type="Animation" id="Animation_s2o8c"]
resource_name = "runningUp"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [11, 12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pdvr0"]
_data = {
"idleDown": SubResource("Animation_0ia1r"),
"idleSide": SubResource("Animation_ne4qq"),
"idleUp": SubResource("Animation_fuxjb"),
"runningDown": SubResource("Animation_s75hl"),
"runningSide": SubResource("Animation_sbcrl"),
"runningUp": SubResource("Animation_s2o8c")
}

[sub_resource type="Gradient" id="Gradient_2qfkn"]
colors = PackedColorArray(0.388235, 0.607843, 1, 0.403922, 0.517647, 1, 1, 0.45098)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_301yk"]
radius = 3.2
height = 6.40001

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p7j8c"]
radius = 3.60001
height = 17.2

[sub_resource type="Gradient" id="Gradient_s3miu"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.152941)

[sub_resource type="Animation" id="Animation_cyc1y"]
resource_name = "spawnPlayer"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%Character:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [5, 3, 9, 3, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%Character:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(1, 1), Vector2(-1, 1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uf308"]
_data = {
"spawnPlayer": SubResource("Animation_cyc1y")
}

[sub_resource type="NavigationPolygon" id="NavigationPolygon_3aqey"]

[node name="Game" type="Node2D"]
scale = Vector2(5, 5)
script = ExtResource("1_b00tj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3
follow_viewport_scale = 3.629

[node name="LeftBottom" type="Control" parent="CanvasLayer"]
layout_direction = 1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(5, 5)

[node name="Panel" type="Panel" parent="CanvasLayer/LeftBottom"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="JoystickMovement" type="Sprite2D" parent="CanvasLayer/LeftBottom/Panel"]
position = Vector2(31, 97)
texture = ExtResource("1_gw2ym")

[node name="Joystick" type="Sprite2D" parent="CanvasLayer/LeftBottom/Panel/JoystickMovement"]
unique_name_in_owner = true
texture = ExtResource("2_fvsn1")
script = ExtResource("3_12l4d")

[node name="RigthBottom" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
scale = Vector2(5, 5)

[node name="Panel" type="Panel" parent="CanvasLayer/RigthBottom"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="JoystickAttack" type="Sprite2D" parent="CanvasLayer/RigthBottom/Panel"]
position = Vector2(-31, 97)
texture = ExtResource("1_gw2ym")

[node name="JoystickAttack" type="Sprite2D" parent="CanvasLayer/RigthBottom/Panel/JoystickAttack"]
unique_name_in_owner = true
position = Vector2(0, -0.199997)
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_7y7di")
script = ExtResource("5_inmwk")

[node name="JoystickCenter" type="Marker2D" parent="CanvasLayer/RigthBottom/Panel/JoystickAttack"]

[node name="LeftTop" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("6_tstij")
metadata/_edit_use_anchors_ = true

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/LeftTop"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/h_separation = 75
theme_override_constants/v_separation = 60
columns = 4
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="CanvasLayer/LeftTop"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("22_j3grl")

[node name="CenterTop" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
size_flags_vertical = 0
script = ExtResource("8_hqe1p")
metadata/_edit_use_anchors_ = true

[node name="WaveCount" type="Label" parent="CanvasLayer/CenterTop"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = -15.0
offset_right = 93.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "
"
label_settings = SubResource("LabelSettings_5f352")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="WaveIndicator" type="Label" parent="CanvasLayer/CenterTop"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = 7.0
offset_right = 93.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
text = "
"
label_settings = SubResource("LabelSettings_5f352")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="CanvasLayer/CenterTop"]
autostart = true

[node name="RightTop" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="Gold" type="Label" parent="CanvasLayer/RightTop"]
layout_mode = 0
offset_left = -100.0
offset_top = 18.0
offset_right = -39.0
offset_bottom = 62.0
text = "0
"
label_settings = SubResource("LabelSettings_vn7es")
horizontal_alignment = 2
script = ExtResource("11_yk85n")

[node name="GoldBag" type="Sprite2D" parent="CanvasLayer/RightTop/Gold"]
position = Vector2(107, 20)
texture = ExtResource("11_1xyqr")

[node name="Label" type="Label" parent="CanvasLayer/RightTop/Gold"]
layout_mode = 0
offset_top = 1.0
offset_right = 88.0
offset_bottom = 45.0
text = " x"
label_settings = SubResource("LabelSettings_vn7es")
horizontal_alignment = 2

[node name="LogContainer" type="Control" parent="CanvasLayer/RightTop"]
clip_contents = true
anchors_preset = 0
offset_left = -101.0
offset_top = 61.0
offset_right = 37.0
offset_bottom = 170.0
script = ExtResource("13_a2xyx")

[node name="TileMap" type="TileMap" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
tile_set = ExtResource("10_4sqws")
cell_quadrant_size = 32
format = 2
layer_0/name = "Ground"
layer_0/z_index = -1
layer_1/name = "Objects"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = true
layer_1/y_sort_origin = 0
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array()
layer_2/name = "Background"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = -2
layer_2/tile_data = PackedInt32Array()
layer_3/name = "Coast"
layer_3/enabled = true
layer_3/modulate = Color(1, 1, 1, 1)
layer_3/y_sort_enabled = false
layer_3/y_sort_origin = 0
layer_3/z_index = 0
layer_3/tile_data = PackedInt32Array()
script = ExtResource("10_b0mh8")
maxXPosition = 2950
maxYPosition = 2000

[node name="Player" type="CharacterBody2D" parent="TileMap"]
unique_name_in_owner = true
visible = false
z_index = 1
y_sort_enabled = true
position = Vector2(147.6, 62)
collision_layer = 32
collision_mask = 5
script = ExtResource("11_8epc5")

[node name="Character" type="Sprite2D" parent="TileMap/Player"]
unique_name_in_owner = true
position = Vector2(0, 1)
texture = ExtResource("12_2tukp")
hframes = 13
frame = 5
script = ExtResource("13_fcpq7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TileMap/Player/Character"]
libraries = {
"": SubResource("AnimationLibrary_pdvr0")
}

[node name="Shadow" type="Sprite2D" parent="TileMap/Player/Character"]
self_modulate = Color(0, 0, 0, 0.372549)
z_index = -1
position = Vector2(-1.52588e-05, 7.99999)
scale = Vector2(0.667, 0.5)
texture = ExtResource("2_fvsn1")

[node name="Camera" type="Camera2D" parent="TileMap/Player"]
unique_name_in_owner = true
zoom = Vector2(1.8, 1.8)
position_smoothing_speed = 8.0
script = ExtResource("15_ex2gy")

[node name="WeponHolder" type="Node2D" parent="TileMap/Player"]
visible = false
script = ExtResource("16_ueo6s")
currentWand = ExtResource("17_uu1gh")

[node name="Wand" type="Sprite2D" parent="TileMap/Player/WeponHolder"]
texture = ExtResource("17_qv646")
offset = Vector2(10, 0)

[node name="CPUParticles2D" type="CPUParticles2D" parent="TileMap/Player/WeponHolder/Wand"]
position = Vector2(14.6, 0)
emitting = false
amount = 2
lifetime = 0.1
one_shot = true
explosiveness = 1.0
local_coords = true
texture = ExtResource("19_ueyyu")
gravity = Vector2(0, 0)
color_ramp = SubResource("Gradient_2qfkn")
hue_variation_min = -0.2
hue_variation_max = 0.56

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap/Player"]
position = Vector2(0, 6.6)
shape = SubResource("CapsuleShape2D_301yk")
disabled = true

[node name="CharacterBody" type="Area2D" parent="TileMap/Player"]
collision_layer = 16
collision_mask = 8
priority = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap/Player/CharacterBody"]
position = Vector2(0, 0.800003)
shape = SubResource("CapsuleShape2D_p7j8c")

[node name="DamageParticles" type="CPUParticles2D" parent="TileMap/Player"]
emitting = false
lifetime = 0.1
one_shot = true
texture = ExtResource("20_fhvkm")
particle_flag_align_y = true
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 150.0
initial_velocity_max = 200.0
scale_amount_min = 5.0
scale_amount_max = 6.0

[node name="DamageParticles2" type="CPUParticles2D" parent="TileMap/Player"]
z_index = 1
emitting = false
amount = 2
lifetime = 0.1
one_shot = true
explosiveness = 1.0
texture = ExtResource("19_ueyyu")
gravity = Vector2(0, 0)
scale_amount_min = 6.0
scale_amount_max = 6.0
color = Color(1, 1, 1, 0.545098)
color_ramp = SubResource("Gradient_s3miu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TileMap/Player"]
libraries = {
"": SubResource("AnimationLibrary_uf308")
}

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="TileMap"]
navigation_polygon = SubResource("NavigationPolygon_3aqey")

[node name="NavigationRegion2DWater" type="NavigationRegion2D" parent="TileMap"]
navigation_layers = 2

[node name="WaveTimer" type="Timer" parent="."]
one_shot = true

[node name="Monsters" type="Node2D" parent="."]

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[connection signal="area_shape_entered" from="TileMap/Player/CharacterBody" to="TileMap/Player/Character" method="_on_character_body_area_shape_entered"]
